// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Models Schema should correct resolve double $ref if no need sibling 1`] = `
Object {
  "refsStack": Array [
    "#/components/schemas/Parent",
  ],
  "resolved": Object {
    "properties": Object {
      "test": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`Models Schema should hoist oneOfs when mergin allOf 1`] = `
Object {
  "oneOf": Array [
    Object {
      "allOf": Array [
        Object {
          "properties": Object {
            "username": Object {
              "description": "The user's name",
              "type": "string",
            },
          },
        },
        Object {
          "properties": Object {
            "extra": Object {
              "type": "string",
            },
          },
        },
        Object {
          "oneOf": Array [
            Object {
              "properties": Object {
                "password": Object {
                  "description": "The user's password",
                  "type": "string",
                },
              },
            },
            Object {
              "properties": Object {
                "mobile": Object {
                  "description": "The user's mobile",
                  "type": "string",
                },
              },
            },
          ],
        },
      ],
      "x-refsStack": undefined,
    },
    Object {
      "allOf": Array [
        Object {
          "properties": Object {
            "email": Object {
              "description": "The user's email",
              "type": "string",
            },
          },
        },
        Object {
          "properties": Object {
            "extra": Object {
              "type": "string",
            },
          },
        },
        Object {
          "oneOf": Array [
            Object {
              "properties": Object {
                "password": Object {
                  "description": "The user's password",
                  "type": "string",
                },
              },
            },
            Object {
              "properties": Object {
                "mobile": Object {
                  "description": "The user's mobile",
                  "type": "string",
                },
              },
            },
          ],
        },
      ],
      "x-refsStack": undefined,
    },
  ],
}
`;

exports[`Models Schema should override description from $ref of the referenced component, when sibling description exists  1`] = `
Object {
  "refsStack": Array [
    "#/components/schemas/Test",
  ],
  "resolved": Object {
    "description": "Overriden description",
    "type": "object",
  },
}
`;
